Add New Toggle Button HTML
(1) HTML for a new toggle button, "Do not display hidden jobs", was
added.

--- a/extension/popup/html/popup.html
+++ b/extension/popup/html/popup.html
@@ -27,10 +27,14 @@
         />
         <h1 class="hide-n-seek-title">Hide n' Seek</h1>
       </div>
-      <div class="buttons-container">
+      <div class="options-container display-none">
         <img class="job-board-name" />
-        <button disabled class="option-button">Unhide All Jobs</button>
+        <button disabled class="option-button">Unhide all jobs</button>
         <button disabled class="undo-button">Undo</button>
+        <label class="toggle-container">
+          Do not display hidden jobs
+          <input type="checkbox" name="remove-hidden-jobs" />
+        </label>
       </div>
     </main>
   </body>
