Add HTML for Inapplicable Tab Popup
(1) Added HTML for inapplicable tab popup, which now shows when the
action button is clicked on an inapplicable tab.

(2) Added draggable="false" attribute to img elements.

(3) Added class "focus-visible-within" to label to catch checkbox focus.

--- a/extension/popup/html/popup.html
+++ b/extension/popup/html/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-applicable-tab="checking">
   <head>
     <script type="module" src="/popup/js/popup.js"></script>
     <link rel="stylesheet" href="/popup/css/popup.css" />
@@ -23,18 +23,93 @@
       <div class="branding-container">
         <img
           alt="A simple drawing of a briefcase, bisected diagonally, with one side a light-brown color and the other side a black color. The face of a black cat with yellow eyes is partially visible as it peeks around the brown edge of the diagonal bisection. This is the logo for the Hide n' Seek browser extension."
+          draggable="false"
           src="/images/hide-n-seek-icon.svg"
         />
         <h1 class="hide-n-seek-title">Hide n' Seek</h1>
       </div>
-      <div class="options-container display-none">
-        <img class="job-board-name" />
+      <div class="options-container options-for-inapplicable-tabs">
+        <div class="job-board-search-options-container">
+          <label
+            class="job-board-search-option-container focus-visible-within"
+            data-checked="false"
+            data-job-board-id="linkedIn"
+            data-job-board-placeholder-name="LinkedIn"
+          >
+            <input name="jobBoardId" type="radio" value="linkedIn" />
+            <svg
+              class="job-board-name"
+              viewBox="0 0 82.9 21"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g fill="#0a66c2">
+                <polygon
+                  points="0 3.1 3.2 3.1 3.2 14.9 9.2 14.9 9.2 17.9 0 17.9"
+                />
+                <path
+                  d="m10.7 7.9h3.1v10h-3.1v-10zm1.5-5c1 0 1.8 0.8 1.8 1.8s-0.8 1.8-1.8 1.8-1.8-0.8-1.8-1.8 0.8-1.8 1.8-1.8"
+                />
+                <polygon
+                  points="26.8 3.1 29.9 3.1 29.9 11.9 33.4 7.9 37.2 7.9 33.2 12.5 37.2 17.9 33.3 17.9 29.9 12.9 29.9 12.9 29.9 17.9 26.8 17.9"
+                />
+                <path
+                  d="m15.5 7.9h3v1.4c0.6-1 1.7-1.7 2.9-1.6 3.2 0 3.7 2.1 3.7 4.8v5.5h-3.1v-5c0-1.2 0-2.7-1.6-2.7s-1.9 1.3-1.9 2.6v5h-3.1v-10z"
+                />
+                <path
+                  d="m43.8 11.7c0-1-0.8-1.9-1.8-1.9h-0.1c-1.1-0.1-2.1 0.8-2.2 1.9h4.1zm2.6 4.5c-1 1.3-2.6 2-4.3 2-3.1 0-5.6-2.1-5.6-5.3s2.5-5.3 5.6-5.3c2.9 0 4.7 2.1 4.7 5.3v1h-7.2c0.2 1.1 1.2 2 2.3 2 0.9 0 1.7-0.5 2.2-1.2l2.3 1.5z"
+                />
+                <path
+                  d="m53.4 10.3c-1.6 0-2.5 1-2.5 2.6s0.9 2.6 2.5 2.6 2.5-1 2.5-2.6-0.9-2.6-2.5-2.6m5.4 7.6h-2.9v-1.3c-0.7 1-1.9 1.6-3.1 1.6-3 0-5-2.2-5-5.2 0-2.8 1.7-5.4 4.6-5.4 1.3 0 2.5 0.4 3.2 1.3v-5.8h3.1l0.1 14.8z"
+                />
+                <path
+                  d="m81.3 0h-17.9c-0.8 0-1.5 0.7-1.6 1.5v18c0 0.8 0.7 1.5 1.6 1.5h17.9c0.8 0 1.5-0.7 1.6-1.5v-18c0-0.8-0.7-1.5-1.6-1.5zm-13.2 17.9h-3.1v-10h3.1v10zm-1.6-11.4c-1 0-1.8-0.8-1.8-1.8s0.8-1.8 1.8-1.8 1.8 0.8 1.8 1.8-0.8 1.8-1.8 1.8zm13.3 11.4h-3.1v-4.9c0-1.2 0-2.7-1.6-2.7s-1.9 1.3-1.9 2.6v5h-3.1v-10h3v1.4c0.6-1 1.7-1.7 2.9-1.6 3.2 0 3.7 2.1 3.7 4.8l0.1 5.4z"
+                />
+              </g>
+            </svg>
+          </label>
+          <label
+            class="job-board-search-option-container focus-visible-within"
+            data-checked="false"
+            data-job-board-id="indeed"
+            data-job-board-placeholder-name="Indeed"
+          >
+            <input name="jobBoardId" type="radio" value="indeed" />
+            <svg
+              class="job-board-name"
+              viewBox="0 0 75 20"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M 74.613 3.458 C 74.348 3.161 73.993 3.01 73.513 3.01 C 73.034 3.01 72.667 3.169 72.412 3.497 C 72.157 3.814 72.025 4.29 72.025 4.914 L 72.025 9.438 C 71.435 8.802 70.822 8.346 70.2 8.039 C 69.812 7.852 69.354 7.713 68.844 7.642 C 68.548 7.602 68.243 7.582 67.907 7.582 C 66.348 7.582 65.085 8.118 64.116 9.19 C 63.158 10.262 62.678 11.75 62.678 13.662 C 62.678 14.566 62.802 15.409 63.045 16.182 C 63.291 16.954 63.635 17.63 64.105 18.204 C 64.573 18.78 65.135 19.215 65.776 19.534 C 66.417 19.841 67.111 19.999 67.864 19.999 C 68.209 19.999 68.536 19.97 68.841 19.911 C 69.046 19.881 69.238 19.831 69.433 19.77 C 69.911 19.612 70.36 19.385 70.768 19.097 C 71.185 18.799 71.604 18.412 72.021 17.946 L 72.021 18.244 C 72.021 18.809 72.164 19.236 72.439 19.543 C 72.725 19.841 73.082 19.999 73.509 19.999 C 73.947 19.999 74.303 19.85 74.578 19.564 C 74.852 19.266 74.996 18.83 74.996 18.246 L 74.996 4.758 C 75 4.191 74.868 3.754 74.613 3.458 Z M 71.444 15.935 C 71.169 16.51 70.801 16.937 70.354 17.215 C 69.895 17.494 69.394 17.631 68.844 17.631 L 68.835 17.631 C 68.283 17.631 67.784 17.482 67.325 17.196 C 66.866 16.898 66.5 16.462 66.236 15.887 C 65.972 15.302 65.84 14.598 65.84 13.764 C 65.84 12.98 65.961 12.287 66.217 11.702 C 66.462 11.106 66.818 10.65 67.268 10.334 C 67.727 10.006 68.237 9.857 68.815 9.857 L 68.846 9.857 C 69.386 9.857 69.885 10.015 70.344 10.322 C 70.803 10.63 71.169 11.078 71.444 11.662 C 71.719 12.247 71.852 12.951 71.852 13.764 C 71.852 14.636 71.719 15.361 71.444 15.935 Z M 61.548 16.065 C 61.354 15.897 61.089 15.807 60.763 15.807 C 60.467 15.807 60.243 15.878 60.08 16.006 C 59.682 16.362 59.367 16.65 59.121 16.858 C 58.878 17.057 58.601 17.255 58.307 17.442 C 58.022 17.622 57.715 17.761 57.411 17.841 C 57.095 17.929 56.759 17.969 56.382 17.969 C 56.3 17.969 56.218 17.969 56.146 17.959 C 55.676 17.93 55.24 17.801 54.843 17.562 C 54.373 17.295 54.007 16.9 53.721 16.383 C 53.446 15.847 53.303 15.233 53.294 14.538 L 59.439 14.538 C 60.264 14.538 60.905 14.418 61.354 14.201 C 61.813 13.962 62.037 13.466 62.037 12.703 C 62.037 11.87 61.813 11.057 61.375 10.254 C 60.937 9.458 60.285 8.804 59.399 8.3 C 58.521 7.794 57.472 7.546 56.239 7.546 L 56.148 7.546 C 55.241 7.556 54.405 7.706 53.662 7.983 C 52.888 8.281 52.234 8.708 51.693 9.252 C 51.175 9.807 50.767 10.471 50.492 11.246 C 50.217 12.02 50.073 12.863 50.073 13.764 C 50.073 15.689 50.635 17.196 51.756 18.316 C 52.814 19.378 54.282 19.934 56.146 19.993 C 56.249 20.002 56.359 20.002 56.473 20.002 C 57.349 20.002 58.132 19.894 58.815 19.666 C 59.498 19.438 60.059 19.159 60.509 18.823 C 60.955 18.476 61.292 18.119 61.516 17.753 C 61.74 17.386 61.853 17.058 61.853 16.79 C 61.853 16.481 61.753 16.233 61.548 16.065 Z M 54.212 10.46 C 54.712 9.934 55.353 9.676 56.138 9.676 L 56.15 9.676 C 56.964 9.676 57.627 9.934 58.126 10.449 C 58.627 10.966 58.921 11.75 58.993 12.799 L 53.295 12.799 C 53.396 11.769 53.703 10.985 54.212 10.46 Z M 48.167 15.806 C 47.862 15.806 47.638 15.876 47.475 16.004 C 47.088 16.361 46.762 16.649 46.517 16.857 C 46.273 17.055 46.007 17.254 45.711 17.441 C 45.417 17.62 45.12 17.759 44.805 17.839 C 44.499 17.927 44.152 17.967 43.775 17.967 C 43.695 17.967 43.613 17.967 43.541 17.958 C 43.071 17.929 42.635 17.799 42.237 17.561 C 41.779 17.294 41.402 16.898 41.127 16.382 C 40.841 15.846 40.698 15.231 40.687 14.537 L 46.842 14.537 C 47.657 14.537 48.299 14.417 48.757 14.199 C 49.205 13.961 49.431 13.465 49.431 12.702 C 49.431 11.868 49.216 11.055 48.778 10.252 C 48.34 9.457 47.678 8.802 46.802 8.298 C 45.924 7.793 44.865 7.545 43.644 7.545 L 43.541 7.545 C 42.635 7.554 41.81 7.705 41.055 7.982 C 40.279 8.279 39.627 8.706 39.098 9.25 C 38.569 9.806 38.161 10.47 37.886 11.244 C 37.609 12.018 37.467 12.862 37.467 13.762 C 37.467 15.687 38.038 17.194 39.159 18.314 C 40.219 19.377 41.675 19.932 43.54 19.991 C 43.652 20.001 43.753 20.001 43.866 20.001 C 44.752 20.001 45.527 19.892 46.209 19.665 C 46.891 19.436 47.453 19.158 47.9 18.822 C 48.359 18.474 48.685 18.118 48.909 17.751 C 49.133 17.385 49.247 17.057 49.247 16.788 C 49.247 16.481 49.144 16.233 48.951 16.065 C 48.749 15.895 48.482 15.806 48.167 15.806 Z M 41.605 10.46 C 42.104 9.934 42.747 9.676 43.532 9.676 L 43.543 9.676 C 44.357 9.676 45.021 9.934 45.519 10.449 C 46.028 10.966 46.314 11.75 46.396 12.799 L 40.689 12.799 C 40.801 11.769 41.108 10.985 41.605 10.46 Z M 6.547 17.969 L 6.547 10.668 C 6.759 10.687 6.964 10.697 7.178 10.697 C 8.197 10.697 9.156 10.43 9.97 9.953 L 9.97 17.967 C 9.97 18.652 9.807 19.158 9.49 19.495 C 9.175 19.831 8.757 19.999 8.248 19.999 C 7.748 19.999 7.351 19.831 7.025 19.484 C 6.71 19.148 6.547 18.642 6.547 17.969 Z M 36.148 3.458 C 35.882 3.161 35.516 3.01 35.057 3.01 C 34.577 3.01 34.211 3.169 33.955 3.497 C 33.692 3.814 33.568 4.29 33.568 4.914 L 33.568 9.438 C 32.978 8.802 32.368 8.346 31.744 8.039 C 31.347 7.852 30.898 7.713 30.39 7.642 C 30.095 7.602 29.788 7.582 29.453 7.582 C 27.894 7.582 26.619 8.118 25.661 9.19 C 24.704 10.262 24.224 11.75 24.224 13.662 C 24.224 14.566 24.347 15.409 24.58 16.182 C 24.825 16.954 25.182 17.63 25.652 18.204 C 26.12 18.78 26.68 19.215 27.323 19.534 C 27.966 19.841 28.656 19.999 29.411 19.999 C 29.747 19.999 30.073 19.97 30.388 19.911 C 30.593 19.881 30.786 19.831 30.98 19.77 C 31.458 19.612 31.907 19.385 32.315 19.097 C 32.732 18.799 33.142 18.412 33.567 17.946 L 33.567 18.244 C 33.567 18.809 33.711 19.236 33.986 19.543 C 34.261 19.841 34.629 19.999 35.056 19.999 C 35.473 19.999 35.841 19.85 36.116 19.564 C 36.391 19.266 36.522 18.83 36.522 18.246 L 36.522 4.758 C 36.523 4.191 36.402 3.754 36.148 3.458 Z M 32.988 15.935 C 32.713 16.51 32.345 16.937 31.888 17.215 C 31.439 17.494 30.928 17.631 30.39 17.631 L 30.38 17.631 C 29.83 17.631 29.329 17.482 28.872 17.196 C 28.404 16.898 28.047 16.462 27.782 15.887 C 27.518 15.302 27.385 14.598 27.385 13.764 C 27.385 12.98 27.508 12.287 27.751 11.702 C 28.005 11.106 28.352 10.65 28.811 10.334 C 29.259 10.006 29.779 9.857 30.35 9.857 L 30.39 9.857 C 30.93 9.857 31.429 10.015 31.878 10.322 C 32.347 10.63 32.713 11.078 32.988 11.662 C 33.252 12.247 33.396 12.951 33.396 13.764 C 33.396 14.636 33.252 15.361 32.988 15.935 Z M 14.994 9.25 L 14.994 9.628 C 15.554 8.913 16.155 8.398 16.808 8.06 C 17.47 7.734 18.224 7.564 19.08 7.564 C 19.906 7.564 20.65 7.743 21.301 8.09 C 21.953 8.436 22.431 8.934 22.758 9.578 C 22.972 9.954 23.105 10.362 23.165 10.799 C 23.226 11.225 23.256 11.78 23.256 12.455 L 23.256 18.14 C 23.256 18.754 23.103 19.22 22.818 19.527 C 22.534 19.844 22.156 20.002 21.697 20.002 C 21.229 20.002 20.852 19.844 20.556 19.518 C 20.26 19.199 20.118 18.735 20.118 18.14 L 20.118 13.047 C 20.118 12.036 19.974 11.263 19.689 10.727 C 19.404 10.193 18.822 9.924 17.968 9.924 C 17.407 9.924 16.899 10.092 16.44 10.41 C 15.981 10.738 15.635 11.183 15.421 11.759 C 15.268 12.215 15.197 13.058 15.197 14.319 L 15.197 18.138 C 15.197 18.762 15.045 19.218 14.75 19.537 C 14.454 19.844 14.078 20.002 13.608 20.002 C 13.149 20.002 12.781 19.844 12.487 19.518 C 12.191 19.199 12.049 18.735 12.049 18.14 L 12.049 9.3 C 12.049 8.716 12.182 8.279 12.447 8.001 C 12.701 7.714 13.058 7.564 13.517 7.564 C 13.792 7.564 14.036 7.623 14.26 7.753 C 14.484 7.881 14.666 8.07 14.801 8.327 C 14.932 8.585 14.994 8.894 14.994 9.25 Z M 6.566 0.473 C 8.686 -0.271 11.101 -0.231 12.914 1.295 C 13.251 1.602 13.637 1.99 13.79 2.446 C 13.974 3.022 13.149 2.385 13.035 2.306 C 12.444 1.929 11.854 1.612 11.192 1.394 C 7.626 0.324 4.252 2.258 2.154 5.263 C 1.278 6.591 0.707 7.99 0.239 9.527 C 0.187 9.695 0.147 9.914 0.055 10.062 C -0.038 10.231 0.015 9.607 0.015 9.586 C 0.085 8.951 0.218 8.337 0.383 7.722 C 1.35 4.449 3.489 1.722 6.566 0.473 Z M 10.672 6.354 C 10.672 7.745 9.545 8.873 8.155 8.873 C 6.766 8.873 5.64 7.745 5.64 6.354 C 5.64 4.964 6.766 3.836 8.155 3.836 C 9.545 3.836 10.672 4.962 10.672 6.354 Z"
+                fill="#003A9B"
+              />
+            </svg>
+          </label>
+        </div>
+        <div class="job-name-search-container focus-visible-within">
+          <input
+            aria-label="Job search textbox"
+            name="job-name"
+            required
+            type="text"
+          />
+          <button disabled tabindex="-1">
+            <img
+              alt="A simple, black magnifying glass icon"
+              draggable="false"
+              src="/images/search-icon.svg"
+            />
+          </button>
+        </div>
+      </div>
+      <div class="options-container options-for-applicable-tabs">
+        <img class="job-board-name" draggable="false" />
         <div class="hidden-jobs-container">
           <div class="hidden-jobs-list-container">
             <div class="nothing-hidden-message" data-list-is-empty="true">
               No hidden jobs
             </div>
-            <div class="collapse-expand-button" data-list-is-scrollable="false">
+            <button class="collapse-expand-button">
               <svg
                 viewBox="7.95 3.525 8.113 17.05"
                 xmlns="http://www.w3.org/2000/svg"
@@ -50,15 +125,17 @@
                   />
                 </g>
               </svg>
-            </div>
+            </button>
             <div class="hidden-jobs-list"></div>
           </div>
           <div class="unhide-all-and-undo-buttons">
-            <button disabled class="option-button">Unhide all jobs</button>
-            <button disabled class="undo-button">Undo</button>
+            <button disabled class="text-button option-button">
+              Unhide all jobs
+            </button>
+            <button disabled class="text-button undo-button">Undo</button>
           </div>
         </div>
-        <label class="toggle-container">
+        <label class="toggle-container focus-visible-within">
           Do not display hidden jobs
           <input type="checkbox" name="remove-hidden-jobs" />
         </label>
