Add disabled Attribute to Collapse-Expand Button

--- a/extension/popup/html/popup.html
+++ b/extension/popup/html/popup.html
@@ -109,7 +109,7 @@
             <div class="nothing-hidden-message" data-list-is-empty="true">
               No hidden jobs
             </div>
-            <button class="collapse-expand-button">
+            <button class="collapse-expand-button" disabled>
               <svg
                 viewBox="7.95 3.525 8.113 17.05"
                 xmlns="http://www.w3.org/2000/svg"
@@ -129,10 +129,10 @@
             <div class="hidden-jobs-list"></div>
           </div>
           <div class="unhide-all-and-undo-buttons">
-            <button disabled class="text-button option-button">
+            <button class="text-button option-button" disabled>
               Unhide all jobs
             </button>
-            <button disabled class="text-button undo-button">Undo</button>
+            <button class="text-button undo-button" disabled>Undo</button>
           </div>
         </div>
         <label class="toggle-container focus-visible-within">
