--- a/extension/popup/html/popup.html
+++ b/extension/popup/html/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-applicable-tab="checking">
+<html data-tab-is-job-board="checking">
   <head>
     <script type="module" src="/popup/js/popup.js"></script>
     <link rel="stylesheet" href="/popup/css/popup.css" />
@@ -28,7 +28,7 @@
         />
         <h1 class="hide-n-seek-title">Hide n' Seek</h1>
       </div>
-      <div class="options-container options-for-inapplicable-tabs">
+      <div class="options-container options-for-job-search">
         <div class="job-board-search-options-container">
           <label
             class="job-board-search-option-container focus-visible-within"
@@ -110,7 +110,7 @@
           </button>
         </div>
       </div>
-      <div class="options-container options-for-applicable-tabs">
+      <div class="options-container options-for-job-board">
         <img class="job-board-name" draggable="false" />
         <div class="hidden-jobs-container">
           <div class="hidden-jobs-list-container">
