--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -137,7 +137,7 @@
                   />
                 </defs>
               </svg>
-              <div class="nothing-hidden-message" data-list-is-empty="true">
+              <div class="nothing-hidden-message" data-list-is-empty>
                 No hidden jobs
               </div>
               <div class="hidden-jobs-list"></div>
