Add origin permission handling (1) Content script permissions are now handled by permissions.js instead of being required permissions in manifest.json

--- a/extension/runtime/popup/popup.html
+++ b/extension/runtime/popup/popup.html
@@ -50,6 +50,11 @@
         </button>
       </header>
       <div class="main-content">
+        <button
+          id="request-permissions"
+          class="text-button black-button"
+          tabindex="0"
+        ></button>
         <div class="options-container options-for-job-search">
           <div class="job-board-search-options-container">
             <label
