Make "Enable Hide n' Seek" button green

--- a/extension/runtime/popup/popup.html
+++ b/extension/runtime/popup/popup.html
@@ -52,7 +52,7 @@
       <div class="main-content">
         <button
           id="request-permissions"
-          class="text-button black-button"
+          class="text-button green-button"
           tabindex="0"
         ></button>
         <div class="options-container options-for-job-search">
