Add "Enable Hide n' Seek on {Job Board}" buttons to job search popup

--- a/extension/runtime/popup/popup.html
+++ b/extension/runtime/popup/popup.html
@@ -141,6 +141,11 @@
               <div class="glass"></div>
             </button>
           </div>
+          <button
+            id="request-permissions-search"
+            class="text-button green-button"
+            tabindex="0"
+          ></button>
         </div>
         <div class="options-container options-for-job-board">
           <img class="job-board-name" draggable="false" />
