Change "Feed Charm?" to "Buy Charm a Coffee?"

--- a/extension/runtime/popup/popup.html
+++ b/extension/runtime/popup/popup.html
@@ -242,12 +242,12 @@
       </div>
       <footer>
         <button class="feed-charm-button">
-          <div class="feed-charm-text">Feed Charm?</div>
+          <div class="feed-charm-text">Buy Charm a Coffee?</div>
           <img
             alt="Empty cat food bowl"
             class="feed-charm-bowl"
             draggable="false"
-            src="/assets/images/feed-charm-bowl.png"
+            src="/assets/images/feed-charm-coffee.png"
           />
           <img
             alt="Red heart"
