Change bowl to coffee

--- a/extension/runtime/popup/popup.html
+++ b/extension/runtime/popup/popup.html
@@ -244,8 +244,8 @@
         <button class="feed-charm-button">
           <div class="feed-charm-text">Buy Charm a Coffee?</div>
           <img
-            alt="Empty cat food bowl"
-            class="feed-charm-bowl"
+            alt="Coffee mug"
+            class="feed-charm-coffee"
             draggable="false"
             src="/assets/images/feed-charm-coffee.png"
           />
