Add checkbox to disable release notes popup after an update

--- a/extension/status.html
+++ b/extension/status.html
@@ -8,6 +8,10 @@
     <script type="module" src="status.js"></script>
   </head>
   <body>
+    <label
+      >Show release notes after an update
+      <input type="checkbox" name="show-release-notes-after-update"
+    /></label>
     <div class="status-container">
       <header>
         <img src="assets/images/hide-n-seek-icon.svg" />
