--- a/extension/status.html
+++ b/extension/status.html
@@ -19,7 +19,7 @@
       </header>
       <section class="version-info">
         <h2>Version <span class="version"></span></h2>
-        <p class="release-date">December 22, 2025</p>
+        <p class="release-date">January 10, 2026</p>
       </section>
       <section class="permissions">
         <h3>Permissions</h3>
@@ -29,18 +29,10 @@
         <h3>What's New</h3>
         <ul>
           <li>
-            <b>Update listing detection on LinkedIn</b>
-            <p>Listings can now be detected on the new version of LinkedIn</p>
-            <p>Fix duplicated overlays on blocked LinkedIn listings</p>
-          </li>
-          <li>
-            <b>Update release notes</b>
+            <b>Regulate the triggering of the release notes popup</b>
             <p>
-              You can now control whether release notes show after an update
-            </p>
-            <p>
-              The release notes now display in a light or dark theme according
-              to your device's preferred color scheme
+              The release notes popup no longer shows after patches to Hide n'
+              Seek or after browser updates
             </p>
           </li>
         </ul>
